<resources>
    <string name="app_name">VoyageCeff</string>
    <string name="label_accueil">Accueil</string>
    <string name="label_calendrier">Calendrier</string>
    <string name="label_check_list">Check List</string>
    <string name="label_reglements">Règlements</string>
    <string name="label_parametres">Paramètres</string>
    <string name="label_ajouter_jour">Ajouter un jour</string>
    <string name="couleur_du_menu">Couleur du menu</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="image_de_fond">Image de fond</string>
    <string name="bckgr_1">BCKGR_1</string>
    <string name="bckgr_2">BCKGR_2</string>
    <string name="bckgr_3">BCKGR_3</string>
    <string name="bckgr_no">BCKGR_NO</string>
    <string name="couleur_du_texte">Couleur du texte</string>
    <string name="choisissez_le_jour_ajouter">Choisissez le jour à ajouter</string>
    <string name="ajouter">Ajouter</string>
    <string name="label_ajout_activite">Ajout d\'une activité</string>
    <string name="label_fin_activite">Fin de l\'activité</string>
    <string name="label_debut_activite">Début de l\'activité</string>
    <string name="label_ajout_de_activite">Ajout de l\'activité</string>
    <string name="label_titre_activite">Titre</string>
    <string name="label_visite_du_temple">Visite du temple</string>
    <string name="habits">Habits</string>
    <string name="chargeur">Chargeur</string>
    <string name="check_lists">Check Lists</string>
    <string name="hide">Hide</string>
</resources>
