<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="always"
        tools:context=".ParametresActivity">

        <TextView
            android:id="@+id/tv_couleurMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/couleur_du_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_color_primary"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_primary_button"
            android:onClick="setColorPrimary"
            app:layout_constraintStart_toEndOf="@+id/btn_color_olive"
            app:layout_constraintTop_toBottomOf="@+id/tv_couleurMenu" />

        <Button
            android:id="@+id/btn_color_rouge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_rouge_button"
            android:onClick="setColorRouge"
            app:layout_constraintStart_toEndOf="@+id/btn_color_bleu"
            app:layout_constraintTop_toBottomOf="@+id/tv_couleurMenu" />

        <Button
            android:id="@+id/btn_color_olive"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_jaune_button"
            android:onClick="setColorJaune"
            app:layout_constraintStart_toEndOf="@+id/btn_color_orange"
            app:layout_constraintTop_toBottomOf="@+id/tv_couleurMenu" />

        <Button
            android:id="@+id/btn_color_orange"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_orange_button"
            android:onClick="setColorOrange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_couleurMenu" />

        <Button
            android:id="@+id/btn_color_noir"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_black_button"
            android:onClick="setTextBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_couleurFont" />

        <Button
            android:id="@+id/btn_color_blanc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_white_button"
            android:onClick="setTextWhite"
            app:layout_constraintStart_toEndOf="@+id/btn_color_noir"
            app:layout_constraintTop_toBottomOf="@+id/tv_couleurFont" />

        <Button
            android:id="@+id/btn_color_bleu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_bleu_button"
            android:onClick="setColorBleu"
            app:layout_constraintStart_toEndOf="@+id/btn_color_primary"
            app:layout_constraintTop_toBottomOf="@+id/tv_couleurMenu" />

        <TextView
            android:id="@+id/tv_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/image_de_fond"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_color_noir" />

        <ImageButton
            android:id="@+id/btn_no_background"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/bckgr_no"
            android:onClick="setNoBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_background"
            app:srcCompat="@android:drawable/ic_delete" />

        <ImageButton
            android:id="@+id/btn_background1"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:contentDescription="@string/bckgr_1"
            android:hapticFeedbackEnabled="false"
            android:onClick="setBackground1"
            android:src="@drawable/sun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_background" />

        <ImageButton
            android:id="@+id/btn_background2"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/bckgr_2"
            android:onClick="setBackground2"
            android:src="@drawable/moon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_no_background" />

        <ImageButton
            android:id="@+id/btn_background3"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:contentDescription="@string/bckgr_3"
            android:onClick="setBackground3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_background1"
            app:srcCompat="@drawable/blood" />

        <TextView
            android:id="@+id/tv_couleurFont"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/couleur_du_texte"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_color_orange" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="6dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_background2" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>